objects/Product2.object
<CustomObject>
    <fields>
        <fullName>SLC_Class__c</fullName>
        <label>Class</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>A1</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>B1</fullName>
                </value>
                <value>
                    <fullName>B12</fullName>
                </value>
                <value>
                    <fullName>B13</fullName>
                </value>
                <value>
                    <fullName>B2</fullName>
                </value>
                <value>
                    <fullName>B3</fullName>
                </value>
                <value>
                    <fullName>B4</fullName>
                </value>
                <value>
                    <fullName>B5</fullName>
                </value>
                <value>
                    <fullName>B6</fullName>
                </value>
                <value>
                    <fullName>B7</fullName>
                </value>
                <value>
                    <fullName>B8</fullName>
                </value>
                <value>
                    <fullName>B9</fullName>
                </value>
                <value>
                    <fullName>C3</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLC_FactsheetUrl__c</fullName>
        <description>Url link to Stanlib Fund Factsheet hosted online.</description>
        <label>Factsheet URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SLC_FundCode__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Fund Code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SLC_ISINCode__c</fullName>
        <label>ISIN Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLC_JSECode__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Johannesburg Stock Exchange code for fund class</description>
        <externalId>true</externalId>
        <label>JSE Code</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SLC_Launch__c</fullName>
        <label>Launch</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLC_ParentFund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parent Fund record this Share Class is derived from</description>
        <label>Parent Fund</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.RecordType.Name</field>
                <operation>equals</operation>
                <value>STANLIB Fund</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products (Parent Fund)</relationshipLabel>
        <relationshipName>Share_Classes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SLC_RecommendedInvestmentPeriod__c</fullName>
        <label>Recommended Investment Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Month</fullName>
                </value>
                <value>
                    <fullName>6 Months</fullName>
                </value>
                <value>
                    <fullName>1 Year</fullName>
                </value>
                <value>
                    <fullName>3 Years</fullName>
                </value>
                <value>
                    <fullName>5 Years</fullName>
                </value>
                <value>
                    <fullName>7 Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLC_RiskRating__c</fullName>
        <label>Risk Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Conservative</fullName>
                </value>
                <value>
                    <fullName>Moderately Conservative</fullName>
                </value>
                <value>
                    <fullName>Moderately Aggressive</fullName>
                </value>
                <value>
                    <fullName>Aggressive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLC_Strategy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Franchise</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only STANLIB strategy products can be inserted here.</errorMessage>
            <filterItems>
                <field>Product2.RecordTypeId</field>
                <operation>equals</operation>
                <value>STANLIB Strategy</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SLI_Capability__c</fullName>
        <label>Capability</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>3rd Party Balanced</fullName>
                </value>
                <value>
                    <fullName>3rd Party Equity</fullName>
                </value>
                <value>
                    <fullName>Balanced</fullName>
                </value>
                <value>
                    <fullName>Equity Fund</fullName>
                </value>
                <value>
                    <fullName>Fixed Income Franchise</fullName>
                </value>
                <value>
                    <fullName>Bond</fullName>
                </value>
                <value>
                    <fullName>Bond Fund</fullName>
                </value>
                <value>
                    <fullName>Income</fullName>
                </value>
                <value>
                    <fullName>Income Fund</fullName>
                </value>
                <value>
                    <fullName>Inflation linked bond fund</fullName>
                </value>
                <value>
                    <fullName>LDI</fullName>
                </value>
                <value>
                    <fullName>LDI Funds</fullName>
                </value>
                <value>
                    <fullName>Money Market</fullName>
                </value>
                <value>
                    <fullName>Money Market Funds</fullName>
                </value>
                <value>
                    <fullName>Preference Share</fullName>
                </value>
                <value>
                    <fullName>STANLIB Equity Fund</fullName>
                </value>
                <value>
                    <fullName>TAA</fullName>
                </value>
                <value>
                    <fullName>Customised Quantitative Strategies</fullName>
                </value>
                <value>
                    <fullName>Enhanced Strategies</fullName>
                </value>
                <value>
                    <fullName>Factor Strategies</fullName>
                </value>
                <value>
                    <fullName>Index Strategies</fullName>
                </value>
                <value>
                    <fullName>Infrastructure</fullName>
                </value>
                <value>
                    <fullName>LIBFIN</fullName>
                </value>
                <value>
                    <fullName>Local Property</fullName>
                </value>
                <value>
                    <fullName>Property</fullName>
                </value>
                <value>
                    <fullName>White Label</fullName>
                </value>
                <value>
                    <fullName>Alternatives</fullName>
                </value>
                <value>
                    <fullName>Cash - Inter</fullName>
                </value>
                <value>
                    <fullName>Multi-Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLR_FeeExclVat__c</fullName>
        <label>Fee (excl VAT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>SLC_JSECode__c</columns>
        <columns>SLC_FundCode__c</columns>
        <columns>PRODUCT2.EXTERNAL_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <listViews>
        <fullName>SLC_FundClass</fullName>
        <columns>SLC_ParentFund__c</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>SLC_Class__c</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>SLC_JSECode__c</columns>
        <columns>SLC_ISINCode__c</columns>
        <columns>SLC_FactsheetUrl__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.SLC_ShareClass</value>
        </filters>
        <label>STANLIB Fund Class</label>
        <sharedTo>
            <roleAndSubordinatesInternal>SLR_Retail_Distribution</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SLC_Strategies</fullName>
        <columns>PRODUCT2.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.SLC_Strategy</value>
        </filters>
        <label>STANLIB Strategies</label>
        <sharedTo>
            <roleAndSubordinatesInternal>SLR_Retail_Distribution</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>STANLIB_Funds</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>SLC_Strategy__c</columns>
        <columns>SLC_FactsheetUrl__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.SLC_Fund</value>
        </filters>
        <label>STANLIB Funds</label>
        <sharedTo>
            <roleAndSubordinatesInternal>SLR_Retail_Distribution</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>SLC_Fund</fullName>
        <active>true</active>
        <label>STANLIB Fund</label>
    </recordTypes>
    <recordTypes>
        <fullName>SLC_ShareClass</fullName>
        <active>true</active>
        <description>The Share Class records of STANLIB funds</description>
        <label>STANLIB Share Class</label>
    </recordTypes>
    <recordTypes>
        <fullName>SLC_Strategy</fullName>
        <active>true</active>
        <label>STANLIB Strategy</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>